Refactoring, Release Notes Update
* All: Update the NuGet package for Prig against `packages.config` of the *.sln for the integration tests.
* Chocolatey: Update the release notes. Add the comment-based help for the parameters that are added to `Find-IndirectionTarget`.
* Profiler: Divide some files for refactoring.

--- a/Chocolatey/Prig.nuspec
+++ b/Chocolatey/Prig.nuspec
@@ -19,8 +19,10 @@
     <copyright>(c) 2014 Akira Sugiura. All rights reserved.</copyright>
     <tags>tdd isolation mock mocks mocking fake fakes faking unittest unittesting</tags>
     <releaseNotes>Version 2.0.0-alpha05
-* 
-* 
+* Improve stability for the methods of the classes that are used on the boundary of application domains(e.g. `AppDomain`, `BinaryReader`, `MemoryStream`, `Thread` and so on).
+* Improve usability for the command to manage Prig a little(See also [the Wiki](https://github.com/urasandesu/Prig.V2Docs/wiki/Command-Line-Reference#pfind)).
+* Merge Infrastructure Bug Fix(See also Swathe issues [#2](https://github.com/urasandesu/Swathe/issues/2))
+* Make the sequence that builds the indirection stub dll more efficient.
 
 
 Version 2.0.0-alpha04
@@ -63,14 +65,6 @@ Version 1.1.0
 Version 1.0.0
 * Release 1.
 * Fixed #25: Default parameterized method can't call indirectly.
-
-
-Version 0.0.0-alpha10
-* Pre-release 10.
-* Fixed #23: Can't be replaced the method that exposes the type of GAC unregistered assembly.
-* Fixed #24: Add Comment-Based Help.
-* Supported the feature that be able to replace any methods that have some non-public type in its signature.
-* [NOTICE] Changed the generated stub's API. It became that the indirection stubs and proxies are generated ALWAYS(overwrite). Until now, it no longer generates stubs and proxies after it generated them once.
 
 
 About more previous versions, please see https://github.com/urasandesu/Prig/releases.
