--- a/Test.Urasandesu.Prig.Framework/Test.Urasandesu.Prig.Framework.csproj
+++ b/Test.Urasandesu.Prig.Framework/Test.Urasandesu.Prig.Framework.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Reference Include="nunit.framework, Version=2.6.3.13283, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -48,12 +49,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleTest.cs" />
+    <Compile Include="IndirectionInfoTest.cs" />
     <Compile Include="IndirectionHolderTest.cs" />
     <Compile Include="DelegateTest.cs" />
     <Compile Include="IndirectionDelegatesTest.cs" />
     <Compile Include="InstanceGettersTest.cs" />
+    <Compile Include="PilotStubberConfiguration\IndirectionStubTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StopwatchTest.cs" />
+    <Compile Include="TestUtilities\DefaultMocks.cs" />
     <Compile Include="TestUtilities\LooseCrossDomainAssert.cs" />
   </ItemGroup>
   <ItemGroup>
