Enhance supported signature
* NAnonym: Merge the fix.
* Swathe: Merge the fix.
* All: Add test variation.
* Chocolatey: Fix the code for generating jagged array. Note that there is difference between C# and the expression of reflection. I think it looks contrariwise... For example, `typeof(int[][,])` is equal to `typeof(int).MakeArrayType(2).MakeArrayType()`, `typeof(int[,][])` is equal to `typeof(int).MakeArrayType().MakeArrayType(2)` and so on.

--- a/UntestableLibrary/UntestableLibrary.csproj
+++ b/UntestableLibrary/UntestableLibrary.csproj
@@ -65,6 +65,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Variations.cs" />
+    <Compile Include="ULUnusedGeneric.cs" />
+    <Compile Include="ULNameHalper.cs" />
     <Compile Include="ULConfigurationManager.cs" />
     <Compile Include="ULDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
