--- a/Nuspec/Prig.nuspec
+++ b/Nuspec/Prig.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Prig</id>
-    <version>1.1.0</version>
+    <version>1.1.1</version>
     <title>Prig: Open Source Alternative to Microsoft Fakes</title>
     <authors>Akira Sugiura</authors>
     <owners>Akira Sugiura</owners>
@@ -17,7 +17,13 @@
     </description>
     <copyright>(c) 2014 Akira Sugiura. All rights reserved.</copyright>
     <tags>tdd isolation mock mocks mocking fake fakes faking unittest unittesting</tags>
-    <releaseNotes>Version 1.1.0
+    <releaseNotes>Version 1.1.1
+* [NOTICE] The family of v1 will be obsolete soon. We strongly recommend migrating to the family of the v2. About the way of the migration, please see [our Wiki](https://github.com/urasandesu/Prig/wiki/Migration-from-v1-to-v2).
+* Support Visual Studio 2015.
+* Merge the fixes that were applied to the family of the v2.
+
+
+Version 1.1.0
 * Release 1.1.
 * Fixed #26: Prig assembly shouldn't need InternalsVisibleToAttribute.
 * Fixed #27: Test stalled if adding the indirection settings for all members of DateTime.
@@ -55,12 +61,6 @@ Version 0.0.0-alpha8
 * Fixed #15: `WebClient.DownloadStringTaskAsync` can't create indirection stub.
 
 
-Version 0.0.0-alpha7
-* Pre-release 7.
-* Fixed #12: `.cctor()` can't replace with indirection stub.
-* Fixed #13: TypeLoadException is occurred when trying to detour multiple assemblies.
-
-
 About more previous versions, please see https://github.com/urasandesu/Prig/releases.
     </releaseNotes>
   </metadata>
@@ -74,5 +74,6 @@ About more previous versions, please see https://github.com/urasandesu/Prig/rele
     <file src="..\Release\x86\prig.exe" target="tools\x86\" />
     <file src="..\Release\x86\Urasandesu.Prig.dll" target="tools\x86\" />
     <file src="tools\**\*.*" target="tools" />
+    <file src="ReadMe.txt" target="" />
   </files>
 </package>
