--- a/Chocolatey/Prig.nuspec
+++ b/Chocolatey/Prig.nuspec
@@ -19,8 +19,12 @@
     <copyright>(c) 2014 Akira Sugiura. All rights reserved.</copyright>
     <tags>tdd isolation mock mocks mocking fake fakes faking unittest unittesting</tags>
     <releaseNotes>Version 2.0.0-alpha06
-* 
-* 
+* Fixed #45: Support Visual Studio 2015
+* Fixed #44: Namespace reference not added for parameter that is array type
+  [NOTICE] This issue has already been fixed in the family of V2. We just applied the fix to the family of V1.
+* Improve installation robustness. The `ExecutionPolicy` of PowerShell that is invoked during build tasks was sometimes unexpected, so modify to set explicit value.
+* Enhance supported signature. The unusual types that appear on the interface of a method is almost supported. For example, `T[,][]`(`T` is a generic type parameter), `List<DateTime[]>[,]`, `out M[][,]`(`M` is a generic method parameter) and so on.
+* Prepare to support three or more out/ref parameters. By decreasing the dependencies of an indirection stub that profiler used, performance is also improved.
 
 
 Version 2.0.0-alpha05
