Support three or more out/ref parameters - add independent middle layer.
* NAnonym: Merge enhancements.
* Chocolatey: Support to be able to generate incomplete indirection stub.
* Framework: Add the middle layer to just express identifying target method to the indirection stub. They are called `IPrigTypeIntroducer` or `IPrigProxyTypeIntroducer`. `IPrigTypeIntroducer` is for any static methods, and `IPrigProxyTypeIntroducer` is for any instance methods. They have only the information to identify target method, so we have to use them with the delegate that has the same signature as the method. However, by this design, developer will be able to use the custom indirection delegate that Prig doesn't prepare like the delegate that has three or more out/ref parameters.
* Profiler: Remove unnecessary codes.

--- a/Chocolatey/Prig.nuspec
+++ b/Chocolatey/Prig.nuspec
@@ -2,7 +2,7 @@
 <package >
   <metadata>
     <id>Prig</id>
-    <version>2.0.0-alpha06</version>
+    <version>2.0.0-alpha07</version>
     <title>Prig: Open Source Alternative to Microsoft Fakes</title>
     <authors>Akira Sugiura</authors>
     <owners>Akira Sugiura</owners>
@@ -18,7 +18,12 @@
     </description>
     <copyright>(c) 2014 Akira Sugiura. All rights reserved.</copyright>
     <tags>tdd isolation mock mocks mocking fake fakes faking unittest unittesting</tags>
-    <releaseNotes>Version 2.0.0-alpha06
+    <releaseNotes>Version 2.0.0-alpha07
+* 
+* 
+
+
+Version 2.0.0-alpha06
 * Fixed #45: Support Visual Studio 2015
 * Fixed #44: Namespace reference not added for parameter that is array type
   [NOTICE] This issue has already been fixed in the family of V2. We just applied the fix to the family of V1.
