Support mocking DLL imports
* Swathe: Merge enhancements.
* Chocolatey: Fix the bug that namespace was not found if there were no indirection delegate references.
* All: Add unit test variation.
* Framework: Remove some code duplications. Make the infrastructure API for the specific instance replacement more simple.
* Profiler: Support mocking DLL imports. Achieving this feature is very easy, because I only tore off the dll import attribute if target method had it.

--- a/UntestableLibrary/UntestableLibrary.csproj
+++ b/UntestableLibrary/UntestableLibrary.csproj
@@ -65,6 +65,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ULChatBot.cs" />
+    <Compile Include="ULDllImport.cs" />
     <Compile Include="Variations.cs" />
     <Compile Include="ULUnusedGeneric.cs" />
     <Compile Include="ULNameHalper.cs" />
