--- a/program1/program1.csproj
+++ b/program1/program1.csproj
@@ -103,6 +103,7 @@
   <ItemGroup>
     <Compile Include="Mixins\UntestableLibrary\ULTableMixin.cs" />
     <Compile Include="MyLibrary\FarmRoad.cs" />
+    <Compile Include="MyLibrary\ChatRoom.cs" />
     <Compile Include="MyLibrary\Route.cs" />
     <Compile Include="MyLibrary\RicePaddy.cs" />
     <Compile Include="MyLibrary\Village.cs" />
