--- a/Test.Urasandesu.Prig.VSPackage/packages.config
+++ b/Test.Urasandesu.Prig.VSPackage/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoFixture" version="3.36.10" targetFramework="net451" />
+  <package id="AutoFixture.AutoMoq" version="3.36.10" targetFramework="net451" />
+  <package id="Moq" version="4.1.1308.2120" targetFramework="net451" />
   <package id="ReactiveProperty" version="1.2.1" targetFramework="net451" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net451" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net451" />
