Minimize the dependency to Chocolatey - prepare releasing v2.1.0
* CppAnonym: Merged the enhancement.
* All: Fix README.md. Reserve the picture area to describe new procedures for installation. Update Build.ps1 to synchronize VSIX Package Manifest to other setting file.
* VSIX: Duplicate LICENSE.md because VSIX can't contain its license information as URL. Support Visual Studio 2015 Update 1. Fix some wrong messages.
* Profiler: Support Visual Studio 2015 Update 1.
* prig: Improve debuggability.

--- a/Urasandesu.Prig.VSPackage/Urasandesu.Prig.VSPackage.csproj
+++ b/Urasandesu.Prig.VSPackage/Urasandesu.Prig.VSPackage.csproj
@@ -256,6 +256,10 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="LICENSE.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <None Include="packages.config" />
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
@@ -390,10 +394,6 @@
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <Content Include="tools\NuGet\tools\Uninstall.ps1">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      <IncludeInVSIX>true</IncludeInVSIX>
-    </Content>
-    <Content Include="tools\Urasandesu.Prig\Urasandesu\Prig\Prig.Invoke-Prig.ps1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
