Add some scripts to support AppVeyor
* prig-vsix: Add wrapper script corresponding to each sub-command of `prig-vsix` because the process scope environment variable cannot be propagated. Also, the process sets the machine scope environment variable, but we cannot restart the console in AppVeyor.

--- a/Urasandesu.Prig.VSPackage/Urasandesu.Prig.VSPackage.csproj
+++ b/Urasandesu.Prig.VSPackage/Urasandesu.Prig.VSPackage.csproj
@@ -282,6 +282,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Content Include="Register-Prig.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <None Include="source.extension.vsixmanifest">
       <SubType>Designer</SubType>
     </None>
@@ -425,6 +429,10 @@
     <Content Include="tools\NUnitTestAdapterForPrig.2.0.0.nupkg">
       <IncludeInVSIX>true</IncludeInVSIX>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Unregister-Prig.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
   </ItemGroup>
   <ItemGroup>
