Add test variation by self-hosting: RegistryKey, kernel32.dll!SetDllDirectory, etc

--- a/UntestableLibrary/UntestableLibrary.csproj
+++ b/UntestableLibrary/UntestableLibrary.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ULInstanceGetters.cs" />
     <Compile Include="ULChatBot.cs" />
     <Compile Include="ULDllImport.cs" />
     <Compile Include="Variations.cs" />
