--- a/Test.program1/Test.program1.csproj
+++ b/Test.program1/Test.program1.csproj
@@ -213,6 +213,7 @@
     <Compile Include="System\Prig\PDateTimeTest.cs" />
     <Compile Include="System\Text\Prig\PStringBuilderTest.cs" />
     <Compile Include="System\Threading\Prig\PInterlockedTest.cs" />
+    <Compile Include="UntestableLibrary\Prig\ULInstanceGettersTest.cs" />
     <Compile Include="UntestableLibrary\Prig\ULDllImportTest.cs" />
     <Compile Include="UntestableLibrary\Prig\VariationsTest.cs" />
     <Compile Include="UntestableLibrary\Prig\PULUnusedGenericTest.cs" />
